@@ -17,6 +17,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
+import com.bankapp.dto.UserDTO;
 import com.bankapp.dto.UserSearchResultDTO;
 import com.bankapp.model.Account;
 import com.bankapp.model.User;
@@ -29,19 +30,40 @@ public class UserController {
 
     @Autowired
     private UserRepository userRepository;
-    
+
     @Autowired
     private AccountRepository accountRepository;
 
+    private UserDTO mapToDTO(User user) {
+        UserDTO dto = new UserDTO();
+        dto.setId(user.getId());
+        dto.setName(user.getName());
+        dto.setEmail(user.getEmail());
+        dto.setRole(user.getRole());
+        dto.setApproved(user.isApproved());
+        return dto;
+    }
+
+    private String generateIban(Account account) {
+        String countryCode = "NL";
+        String bankCode = "BANK";
+        String paddedId = String.format("%010d", account.getId());
+        return countryCode + bankCode + paddedId;
+    }
+
     @GetMapping
-    public List<User> getAllUsers() {
-        return userRepository.findAll();
+    public List<UserDTO> getAllUsers() {
+        return userRepository.findAll()
+                .stream()
+                .map(this::mapToDTO)
+                .collect(Collectors.toList());
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<User> getUserById(@PathVariable Long id) {
+    public ResponseEntity<UserDTO> getUserById(@PathVariable Long id) {
         Optional<User> userOpt = userRepository.findById(id);
-        return userOpt.map(ResponseEntity::ok).orElseGet(() -> ResponseEntity.notFound().build());
+        return userOpt.map(user -> ResponseEntity.ok(mapToDTO(user)))
+                .orElseGet(() -> ResponseEntity.notFound().build());
     }
 
     @DeleteMapping("/{id}")
@@ -53,11 +75,13 @@ public class UserController {
         return ResponseEntity.ok("User deleted.");
     }
 
-    // Get list of users who were not yet approved
     @GetMapping("/pending")
     @PreAuthorize("hasRole('EMPLOYEE')")
-    public List<User> getPendingUsers() {
-        return userRepository.findByApprovedFalse();
+    public List<UserDTO> getPendingUsers() {
+        return userRepository.findByApprovedFalse()
+                .stream()
+                .map(this::mapToDTO)
+                .collect(Collectors.toList());
     }
 
     @PostMapping("/{id}/approve")
@@ -74,34 +98,26 @@ public class UserController {
         return ResponseEntity.ok("User approved successfully.");
     }
 
-    // Get list of users who are approved
     @GetMapping("/approved")
     @PreAuthorize("hasRole('EMPLOYEE')")
-    public List<User> getApprovedCustomers() {
-        return userRepository.findByApprovedTrue().stream()
+    public List<UserDTO> getApprovedCustomers() {
+        return userRepository.findByApprovedTrue()
+                .stream()
                 .filter(user -> "CUSTOMER".equalsIgnoreCase(user.getRole()))
-                .toList();
+                .map(this::mapToDTO)
+                .collect(Collectors.toList());
     }
-    
-    /**
-     * Legacy search endpoints - kept for backward compatibility
-     */
+
     @GetMapping("/find-by-name")
     public ResponseEntity<?> searchUsersByName(@RequestParam String name, Authentication authentication) {
-        // Delegate to unified search endpoint
         return searchUsers(name, null, null, null, authentication);
     }
-    
-    @GetMapping("/find-by-email") 
+
+    @GetMapping("/find-by-email")
     public ResponseEntity<?> searchUsersByEmail(@RequestParam String email, Authentication authentication) {
-        // Delegate to unified search endpoint
         return searchUsers(null, null, email, null, authentication);
     }
-    
-    /**
-     * Simplified search endpoint with a single search term
-     * Search term can be a name, email, or IBAN
-     */
+
     @GetMapping("/search")
     public ResponseEntity<?> searchUsers(
             @RequestParam(required = false) String term,
@@ -109,35 +125,30 @@ public class UserController {
             @RequestParam(required = false) String email,
             @RequestParam(required = false) String iban,
             Authentication authentication) {
-        
-        // Check if the user is authenticated
+
         if (authentication == null) {
             return ResponseEntity.badRequest().body("User not authenticated");
         }
-        
-        // Get the authenticated user
+
         Optional<User> userOpt = userRepository.findByEmail(authentication.getName());
         if (userOpt.isEmpty()) {
             return ResponseEntity.badRequest().body("User not found");
         }
-        
-        // Only authenticated users can search
+
         if (!userOpt.get().isApproved()) {
             return ResponseEntity.badRequest().body("User not approved");
         }
-        
-        // If term is provided, use it as the universal search term
+
         if (term != null && !term.trim().isEmpty()) {
             List<User> matchingUsers = userRepository.findCustomersBySearchTerm(term.trim());
-            
-            // Check if the search term might be an IBAN
+
             if (matchingUsers.isEmpty() && term.replaceAll("\\s+", "").toUpperCase().contains("BANK")) {
                 String cleanTerm = term.replaceAll("\\s+", "").toUpperCase();
                 if (cleanTerm.startsWith("NLBANK")) {
                     try {
                         String accountIdPart = cleanTerm.substring("NLBANK".length());
                         Long accountId = Long.parseLong(accountIdPart);
-                        
+
                         Optional<Account> account = accountRepository.findById(accountId);
                         if (account.isPresent() && account.get().isApproved() && !account.get().isClosed()) {
                             User accountOwner = account.get().getUser();
@@ -146,40 +157,42 @@ public class UserController {
                             }
                         }
                     } catch (NumberFormatException | IndexOutOfBoundsException e) {
-                        // Invalid IBAN format, return empty result
+                        // invalid IBAN format
                     }
                 }
             }
-            
+
             List<UserSearchResultDTO> results = matchingUsers.stream()
-                    .map(user -> new UserSearchResultDTO(user, accountRepository.findByUserId(user.getId())))
+                    .map(user -> {
+                        List<Account> accounts = accountRepository.findByUserId(user.getId());
+                        List<String> ibans = accounts.stream()
+                                .filter(Account::isApproved)
+                                .filter(account -> !account.isClosed())
+                                .map(this::generateIban)
+                                .collect(Collectors.toList());
+                        return new UserSearchResultDTO(user.getId(), user.getName(), ibans);
+                    })
                     .collect(Collectors.toList());
-            
+
             return ResponseEntity.ok(results);
         }
-        
-        // Legacy behavior for backward compatibility
-        // Validate that at least one search parameter is provided
-        if ((name == null || name.trim().isEmpty()) && 
-            (email == null || email.trim().isEmpty()) && 
+
+        if ((name == null || name.trim().isEmpty()) &&
+            (email == null || email.trim().isEmpty()) &&
             (iban == null || iban.trim().isEmpty())) {
             return ResponseEntity.badRequest().body("At least one search parameter is required");
         }
-        
+
         List<User> matchingUsers = new ArrayList<>();
-        
-        // If IBAN is provided, search by IBAN
+
         if (iban != null && !iban.trim().isEmpty()) {
-            // Clean the IBAN by removing spaces
             String cleanIban = iban.replaceAll("\\s+", "");
-            
-            // Extract the numeric part (account ID) from the IBAN format
+
             if (cleanIban.startsWith("NLBANK")) {
                 try {
                     String accountIdPart = cleanIban.substring("NLBANK".length());
                     Long accountId = Long.parseLong(accountIdPart);
-                    
-                    // Find the account by ID
+
                     Optional<Account> accountOpt = accountRepository.findById(accountId);
                     if (accountOpt.isPresent() && accountOpt.get().isApproved() && !accountOpt.get().isClosed()) {
                         User accountOwner = accountOpt.get().getUser();
@@ -188,22 +201,28 @@ public class UserController {
                         }
                     }
                 } catch (NumberFormatException | IndexOutOfBoundsException e) {
-                    // Invalid IBAN format, just continue with an empty result for IBAN search
+                    // invalid IBAN format
                 }
             }
         } else {
-            // Search by name and/or email
             matchingUsers = userRepository.findByNameAndEmailAndRole(
                     (name != null && !name.trim().isEmpty()) ? name : null,
                     (email != null && !email.trim().isEmpty()) ? email : null,
                     "customer");
         }
-        
-        // Convert to DTOs with IBANs
+
         List<UserSearchResultDTO> results = matchingUsers.stream()
-                .map(user -> new UserSearchResultDTO(user, accountRepository.findByUserId(user.getId())))
+                .map(user -> {
+                    List<Account> accounts = accountRepository.findByUserId(user.getId());
+                    List<String> ibans = accounts.stream()
+                            .filter(Account::isApproved)
+                            .filter(account -> !account.isClosed())
+                            .map(this::generateIban)
+                            .collect(Collectors.toList());
+                    return new UserSearchResultDTO(user.getId(), user.getName(), ibans);
+                })
                 .collect(Collectors.toList());
-        
+
         return ResponseEntity.ok(results);
     }
 }
